fix visibility in dark mode

--- a/src/index.less
+++ b/src/index.less
@@ -72,3 +72,10 @@ a, .ant-btn-link, .ant-btn-default, .ant-radio-button-wrapper {
         padding: 0 20px !important;
     }
 }
+
+.ant-menu-light .ant-menu-item-selected,
+.ant-menu-light .ant-menu-submenu-selected>.ant-menu-submenu-title {
+    html.theme-dark & {
+        color: #66b5ff !important;
+    }
+}
